# NBAStatPy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  STANDARDIZATION.md  mypy.ini  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint.yml  pre-commit.yml  publish.yml  release-please.yml  run_tests.yml  security.yml  type-check.yml
examples/: standardization_example.py
src/nbastatpy/: __init__.py  config.py  game.py  league.py  player.py  season.py  standardize.py  team.py  utils.py
src/nbastatpy/mcp/: server.py
src/nbastatpy/mcp/tools/: game_tools.py  league_tools.py  player_tools.py  team_tools.py
tests/: conftest.py  test_e2e.py  test_game.py  test_league.py  test_mcp_server.py  test_mcp_tools.py  test_player.py  test_season.py  test_standardize.py  test_team.py
