[tool.poetry]
name = "nbastatpy"
version = "0.1.0"
description = ""
authors = ["Anthony Berghammer <aberghammer.analytics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
nba_api = "^1.4.1"
pillow = "^10.3.0"
requests = "^2.31.0"
loguru = "^0.7.2"
cairosvg = "^2.7.1"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
