[project]
name = "nbastatpy"
version = "0.1.8"  # Managed by release-please
description = "An easy-to-use wrapper for nba_api to easily find data for a player, game, team, or league"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "fastmcp>=2,<3",
    "loguru>=0.7.3",
    "nba-api>=1.6.1",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
keywords = ["basketball", "data", "nba", "sports", "stats"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]


[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "ruff>=0.8.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "safety>=3.2.11",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nbastatpy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/build/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
